# 2026_1_PI1_Grupo02_Hilmer

./: .gitignore  index.html
.github/ISSUE_TEMPLATE/: major-issue-template.md  sub-issue-rf-template.md  sub-issue-rnf-template.md  sub-issue-template.md  task-template.md
docs/Energia/: calculosBateria.md
docs/software/: arquitetura-software.md
hw/EAP - Eletronica/: Documento_inicial_eletrônica.md
hw/EAP_Energia/: Documento_Energia.md  EAP_Energia.drawio
hw/EAP_Estrutura/: Documento_inicial.md
hw/Micromouse/: CMakeLists.txt
hw/Micromouse/main/: CMakeLists.txt  battery.cpp  battery.hpp  i2c_manager.cpp  i2c_manager.hpp  idf_component.yml  main.cpp  motor.cpp  motor.hpp  pins.hpp
hw/Micromouse/main/app/: main.cpp  motor_hbridge_test.cpp
hw/Micromouse/main/battery/: battery.cpp  battery.hpp
hw/Micromouse/main/imu/: imu.cpp  imu.h
hw/Micromouse/main/motor/: motor.cpp  motor.hpp
hw/Micromouse/main/sd_card/: sd_card.cpp  sd_card.hpp
hw/Micromouse/main/vl53l0x/: IV_Vl53l0x.cpp  IV_Vl53l0x.hpp
hw/PCB/: BOM_Board1_PCB1_2026-05-09.xlsx
hw/energia/: calculosBateria.md  selecaoBateria.md
mec/: Base.FCStd  Estudo de viabilidade de materiais de chassi, rodas e skid.tex  Estudo sobre métodos de transmissão da roda no motor.md  Lista de atributos de componentes para estrutura.md  Parede_externa_junta_asa.CATPart  Parede_interna_junta_asa.CATPart  caracteristicas_roda.md  esboco_caracteristicas_desejaveis_rodas.md
mec/modelagem 3d/: Labirinto06.FCStd
pages/: _sidebar.md  sidebar.md
pages/docs/: README.md  cronograma.md  eap_geral.md
(+84 files in other folders)
